[gd_scene load_steps=3 format=1]

[ext_resource path="res://font/font.fnt" type="BitmapFont" id=1]
[ext_resource path="res://scene/load.gd" type="Script" id=2]

[node name="Node" type="Node"]

[node name="bg" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 962.0
margin/bottom = 540.0

[node name="list" type="ItemList" parent="bg"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 962.0
margin/bottom = 460.0
custom_fonts/font = ExtResource( 1 )
script/script = ExtResource( 2 )

[node name="load" type="Button" parent="bg"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 460.0
margin/right = 313.0
margin/bottom = 498.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "load"
flat = false

[node name="return" type="Button" parent="bg"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 520.0
margin/top = 460.0
margin/right = 633.0
margin/bottom = 498.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "return"
flat = false

[connection signal="item_activated" from="bg/list" to="bg/list" method="_on_list_item_act"]

[connection signal="item_selected" from="bg/list" to="bg/list" method="_on_list_select"]

[connection signal="pressed" from="bg/load" to="bg/list" method="_on_load"]

[connection signal="pressed" from="bg/return" to="bg/list" method="_on_close"]


